exampledir = $(docdir)/examples
dist_example_DATA = surf_match.patch

examplemocdir = $(docdir)/examples/MOC
dist_examplemoc_DATA = MOC/E0201461.imq MOC/M0100115.imq MOC/Makefile MOC/stereo.default

examplek10dir = $(docdir)/examples/K10
dist_examplek10_DATA = K10/Makefile K10/black_left.tsai K10/black_right.tsai K10/left4.png K10/right4.png K10/stereo.default