# __BEGIN_LICENSE__
# Copyright (C) 2006-2011 United States Government as represented by
# the Administrator of the National Aeronautics and Space Administration.
# All Rights Reserved.
# __END_LICENSE__


exampledir = $(docdir)/examples
dist_example_DATA = surf_match.patch

examplemocdir = $(docdir)/examples/MOC
dist_examplemoc_DATA = MOC/E0201461.imq MOC/M0100115.imq MOC/Makefile MOC/stereo.map MOC/stereo.nonmap

examplek10dir = $(docdir)/examples/K10
dist_examplek10_DATA = K10/Makefile K10/black_left.tsai K10/black_right.tsai K10/left4.png K10/right4.png K10/stereo.default

examplemerdir = $(docdir)/examples/MER
dist_examplemer_DATA = MER/Makefile MER/stereo.default MER/stereo.default.navcam

examplectxdir = $(docdir)/examples/CTX
dist_examplectx_DATA = CTX/Makefile CTX/stereo.map CTX/stereo.nonmap