# __BEGIN_LICENSE__
#  Copyright (c) 2009-2013, United States Government as represented by the
#  Administrator of the National Aeronautics and Space Administration. All
#  rights reserved.
#
#  The NGT platform is licensed under the Apache License, Version 2.0 (the
#  "License"); you may not use this file except in compliance with the
#  License. You may obtain a copy of the License at
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
# __END_LICENSE__


exampledir = $(docdir)/examples
dist_example_DATA = surf_match.patch TriangulationError.lut

examplemocdir = $(docdir)/examples/MOC
dist_examplemoc_DATA = MOC/E0201461.imq MOC/M0100115.imq MOC/Makefile MOC/stereo.map MOC/stereo.nonmap MOC/control.net

examplek10dir = $(docdir)/examples/K10
dist_examplek10_DATA = K10/Makefile K10/black_left.tsai K10/black_right.tsai K10/left4.png K10/right4.png K10/stereo.default

examplemerdir = $(docdir)/examples/MER
dist_examplemer_DATA = MER/Makefile MER/stereo.default MER/stereo.default.navcam

examplectxdir = $(docdir)/examples/CTX
dist_examplectx_DATA = CTX/Makefile CTX/stereo.map CTX/stereo.nonmap

examplehirisedir = $(docdir)/examples/HiRISE
dist_examplehirise_DATA = HiRISE/Makefile HiRISE/downloader.sh HiRISE/stereo.nonmap